--- a/index.html
+++ b/index.html
@@ -22,23 +22,23 @@
       <section class="inner-container">
         <img src="person-0.jpg" alt="" />
         <p>
-          <i class="fa-solid fa-user"></i> Name :
+          <i class="fa-solid fa-user"></i> Name : Anderson
           <span class="name"> </span>
         </p>
         <p>
-          <i class="fa-solid fa-user"></i> LastName :
+          <i class="fa-solid fa-user"></i> LastName : Manderson
           <span class="last-name"> </span>
         </p>
         <p>
-          <i class="fa-solid fa-magnifying-glass-location"></i> Location :
+          <i class="fa-solid fa-magnifying-glass-location"></i> Location : Adana
           <span class="location"></span>
         </p>
         <p>
-          <i class="fa-solid fa-phone-flip"></i>Phone :
+          <i class="fa-solid fa-phone-flip"></i>Phone : 123-456-789
           <span class="phone"></span>
         </p>
         <p>
-          <i class="fa-solid fa-envelope"></i>Email :
+          <i class="fa-solid fa-envelope"></i>Email : asdfg@gmail.com
           <span class="email"></span>
         </p>
       </section>
